--- a/main.css
+++ b/main.css
@@ -1,10 +1,25 @@
+* {
+    box-sizing: border-box; /* Propriedade que seta onde irá atuar height e width */
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 #product-overview {
     background: red;
+    padding: 20px;
+    border: 5px black solid;
+    margin: 20px;
+    /* width: 50%; */
+    width: 100%;
+    height: 528px;
 }
+
+/* #plans {
+    border: 5px solid; Verificação da margem
+} */
 
 #product-overview h1 {
     color: white;
@@ -14,4 +29,5 @@ body {
 .section-title {
     color: #2ddf5c;
     font-family: inherit;
+    /* margin:20px; Verificação da margem */ 
 }
