--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 #product-overview {
-    background: #ff1b68;
+    background: url("freedom.jpg");
     padding: 10px;
     width: 100%;
     height: 528px;
@@ -35,6 +35,64 @@ body {
     width: 100%;
 }
 
+.main-header > div {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.main-header__brand {
+    color: #0e414f;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 74px);
+    vertical-align: middle;
+}
+
+.main-nav__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
 .main-nav__item {
     display: inline-block;
+    margin: 0px 16px;
+}
+
+.main-nav__item a {
+    color: #0e414f;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 3px 0;
+}
+
+/* .main-nav__item a::after {
+    content: " (Link)";
+    color: red;
+} */
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+    color: white;
+    border-bottom: 5px solid white;
+}
+
+.main-nav__item--cta a {
+    color: white;
+    background: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    color: #ff1b68;
+    background: white;
+    border: none;
 }
